Goated Voxelshape handling